iterate on labels

--- a/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
+++ b/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
@@ -56,6 +56,7 @@
    "source": [
     "import os\n",
     "import logging\n",
+    "from time import sleep\n",
     "from openai import OpenAI\n",
     "\n",
     "CONFIG_CONTENT = \"\"\"\n",
@@ -83,29 +84,37 @@
     "\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "\n",
-    "logging.basicConfig(filename='notebook.log',\n",
-    "                    filemode='a',\n",
-    "                    format='%(asctime)s,%(msecs)d %(name)s %(levelname)s %(message)s',\n",
-    "                    datefmt='%H:%M:%S',\n",
-    "                    level=logging.DEBUG)\n",
+    "logging.basicConfig(\n",
+    "    filename=\"notebook.log\",\n",
+    "    filemode=\"a\",\n",
+    "    format=\"%(asctime)s,%(msecs)d %(name)s %(levelname)s %(message)s\",\n",
+    "    datefmt=\"%H:%M:%S\",\n",
+    "    level=logging.DEBUG,\n",
+    ")\n",
     "\n",
     "\n",
     "# os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
     "# os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
     "client = OpenAI()\n",
-    "model = client.models.list().data[0].id\n",
+    "MODEL = client.models.list().data[0].id\n",
     "\n",
-    "model = 'gpt-3.5-turbo-instruct'\n",
+    "MODEL = \"gpt-3.5-turbo-instruct\"\n",
+    "PKL_DIR = os.path.join(os.getcwd(), MODEL)\n",
+    "\n",
+    "os.makedirs(PKL_DIR, exist_ok=True)\n",
+    "\n",
+    "\n",
     "def get_openai_response(prompt: str) -> str:\n",
-    "    if model == 'gpt-3.5-turbo-instruct':\n",
-    "        response = client.completions.create(model=model, prompt= prompt).choices[0].text        \n",
+    "    if MODEL.startswith(\"gpt-3.5\"):\n",
+    "        sleep(0.1)\n",
+    "    if MODEL == \"gpt-3.5-turbo-instruct\":\n",
+    "        response = client.completions.create(model=MODEL, prompt=prompt).choices[0].text\n",
     "    else:\n",
-    "        response = client.completions.create(model=model, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
-    "        \n",
+    "        response = client.completions.create(model=MODEL, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
+    "\n",
     "    assert response\n",
     "    assert type(response) == str\n",
-    "    return response\n",
-    "        \n"
+    "    return response"
    ]
   },
   {
@@ -187,10 +196,7 @@
     "        entities_rows.append({\"name\": ent.text, \"label\": ent.label_, \"fact\": doc, \"enriched_doc\": enriched_doc})  # type: ignore\n",
     "\n",
     "\n",
-    "entities_df = pd.DataFrame(entities_rows)\n",
-    "\n",
-    "with open(\"entities.pkl\", \"wb\") as f:\n",
-    "    entities_df.to_pickle(f)"
+    "raw_entities_df = pd.DataFrame(entities_rows)"
    ]
   },
   {
@@ -222,7 +228,7 @@
     "# os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
     "client = OpenAI()\n",
     "# model = client.models.list().data[0].id\n",
-    "model = 'gpt-3.5-turbo-instruct'\n",
+    "MODEL = \"gpt-3.5-turbo-instruct\"\n",
     "\n",
     "VALID_LABELS = [\n",
     "    \"PERSON\",\n",
@@ -242,7 +248,7 @@
     "TRUST_LABELS = [\"CARDINAL\", \"DATE\", \"TIME\"]\n",
     "\n",
     "entity_rows = []\n",
-    "for _, row in tqdm(entities_df.iterrows()):\n",
+    "for _, row in tqdm(raw_entities_df.iterrows()):\n",
     "    name = row[\"name\"]\n",
     "    fact = row[\"fact\"]\n",
     "    prev_label = row[\"label\"]\n",
@@ -295,16 +301,9 @@
     "\n",
     "    entity_rows.append({\"name\": name, \"label\": winner, \"fact\": fact, \"score\": score, \"llm_response\": response})\n",
     "\n",
-    "with open(\"refined_labels.pkl\", \"wb\") as f:\n",
+    "with open(os.path.join(PKL_DIR, \"refined_entity_labels.pkl\"), \"wb\") as f:\n",
     "    pd.DataFrame(entity_rows).to_pickle(f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -321,18 +320,18 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "with open(\"refined_labels.pkl\", \"rb\") as f:\n",
-    "    raw_entity_with_labels = pd.read_pickle(f)\n",
+    "with open(os.path.join(PKL_DIR, \"refined_entity_labels.pkl\"), \"rb\") as f:\n",
+    "    refined_entity_labels = pd.read_pickle(f)\n",
     "\n",
     "# normalize scores\n",
-    "min_score = raw_entity_with_labels[\"score\"].min() - 1\n",
-    "max_score = raw_entity_with_labels[\"score\"].max()\n",
-    "raw_entity_with_labels[\"score\"] = (raw_entity_with_labels[\"score\"] - min_score) / (max_score - min_score)\n",
+    "min_score = refined_entity_labels[\"score\"].min() - 1\n",
+    "max_score = refined_entity_labels[\"score\"].max()\n",
+    "refined_entity_labels[\"score\"] = (refined_entity_labels[\"score\"] - min_score) / (max_score - min_score)\n",
     "\n",
     "\n",
-    "entity_names_and_labels_summed_scores = raw_entity_with_labels.groupby([\"name\", \"label\"]).agg({\"score\": \"sum\"}).reset_index()\n",
-    "entity_name_total_scores = raw_entity_with_labels.groupby(\"name\")[\"score\"].sum().reset_index(\"name\")\n",
-    "entity_name_counts = raw_entity_with_labels.groupby(\"name\")[\"label\"].count().reset_index(\"name\")\n",
+    "entity_names_and_labels_summed_scores = refined_entity_labels.groupby([\"name\", \"label\"]).agg({\"score\": \"sum\"}).reset_index()\n",
+    "entity_name_total_scores = refined_entity_labels.groupby(\"name\")[\"score\"].sum().reset_index(\"name\")\n",
+    "entity_name_counts = refined_entity_labels.groupby(\"name\")[\"label\"].count().reset_index(\"name\")\n",
     "\n",
     "\n",
     "merged_df = pd.merge(entity_names_and_labels_summed_scores, entity_name_total_scores, on=\"name\", suffixes=(\"\", \"_total_by_name\"))\n",
@@ -340,13 +339,13 @@
     "merged_df[\"confidence_score\"] = merged_df[\"score\"] / merged_df[\"score_total_by_name\"]\n",
     "\n",
     "# remove non-winners\n",
-    "entity_with_labels = merged_df.sort_values(\"confidence_score\", ascending=False).drop_duplicates(\"name\").reset_index()\n",
+    "final_entity_with_labels = merged_df.sort_values(\"confidence_score\", ascending=False).drop_duplicates(\"name\").reset_index()\n",
     "\n",
-    "with open(\"entities_with_labels.pkl\", \"wb\") as f:\n",
-    "    entity_with_labels.to_pickle(f)\n",
+    "with open(os.path.join(PKL_DIR, \"final_entity_with_labels.pkl\"), \"wb\") as f:\n",
+    "    final_entity_with_labels.to_pickle(f)\n",
     "\n",
     "# # facts and set of entities\n",
-    "facts_with_entities = raw_entity_with_labels.groupby(\"fact\")[\"name\"].apply(lambda x: set(x)).reset_index()"
+    "facts_with_entities = refined_entity_labels.groupby(\"fact\")[\"name\"].apply(lambda x: set(x)).reset_index()"
    ]
   },
   {
@@ -361,25 +360,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import re\n",
     "from tqdm import tqdm\n",
-    "import os\n",
-    "from openai import OpenAI\n",
     "import random\n",
     "\n",
     "\n",
@@ -407,13 +390,6 @@
     "}\n",
     "\n",
     "\n",
-    "\n",
-    "resolve_entities = pd.read_pickle(\"refined_labels.pkl\")[\"name\"]\n",
-    "# first element in the tuple is the label\n",
-    "resolved_labels = pd.read_pickle(\"refined_labels.pkl\")[\"label\"].apply(lambda x: x[0])\n",
-    "\n",
-    "resolved_entity_df = pd.DataFrame({\"name\": resolve_entities, \"label\": resolved_labels})\n",
-    "\n",
     "ENTITY_LABEL_CONFIDENCE_THRESHOLD = 0.7\n",
     "\n",
     "relation_rows = []\n",
@@ -428,12 +404,12 @@
     "        for entity_2 in entities:\n",
     "            if entity_1 == entity_2:\n",
     "                continue\n",
-    "            label_1 = entity_with_labels[entity_with_labels[\"name\"] == entity_1][\"label\"].values[0]\n",
-    "            label_2 = entity_with_labels[entity_with_labels[\"name\"] == entity_2][\"label\"].values[0]\n",
+    "            label_1 = final_entity_with_labels[final_entity_with_labels[\"name\"] == entity_1][\"label\"].values[0]\n",
+    "            label_2 = final_entity_with_labels[final_entity_with_labels[\"name\"] == entity_2][\"label\"].values[0]\n",
     "\n",
     "            # confidence scores:\n",
-    "            score_1 = entity_with_labels[entity_with_labels[\"name\"] == entity_1][\"confidence_score\"].values[0]\n",
-    "            score_2 = entity_with_labels[entity_with_labels[\"name\"] == entity_2][\"confidence_score\"].values[0]\n",
+    "            score_1 = final_entity_with_labels[final_entity_with_labels[\"name\"] == entity_1][\"confidence_score\"].values[0]\n",
+    "            score_2 = final_entity_with_labels[final_entity_with_labels[\"name\"] == entity_2][\"confidence_score\"].values[0]\n",
     "\n",
     "            if score_1 < ENTITY_LABEL_CONFIDENCE_THRESHOLD or score_2 < ENTITY_LABEL_CONFIDENCE_THRESHOLD:\n",
     "                logging.info(f\"skipping {entity_1} and {entity_2} due to low confidence scores\")\n",
@@ -474,7 +450,7 @@
     "                        winner = label\n",
     "            # score is regex match for first number in the response\n",
     "            try:\n",
-    "                score = int(re.search(r\"\\d+\", response).group())\n",
+    "                score = int(re.search(r\"\\d+\", response).group())  # type: ignore\n",
     "            except AttributeError:\n",
     "                score = 0\n",
     "\n",
@@ -489,7 +465,7 @@
     "            relation_rows.append(row)\n",
     "\n",
     "relation_df = pd.DataFrame(relation_rows)\n",
-    "with open(\"relationships.pkl\", \"wb\") as f:\n",
+    "with open(os.path.join(PKL_DIR, \"raw_relationships.pkl\"), \"wb\") as f:\n",
     "    relation_df.to_pickle(f)"
    ]
   },
@@ -502,7 +478,7 @@
     "import pandas as pd\n",
     "\n",
     "# normalize scores and pick winners\n",
-    "with open(\"relationships.pkl\", \"rb\") as f:\n",
+    "with open(os.path.join(PKL_DIR, \"raw_relationships.pkl\"), \"rb\") as f:\n",
     "    raw_relationships = pd.read_pickle(f)\n",
     "\n",
     "min_score = raw_relationships[\"score\"].min() - 1\n",
@@ -531,10 +507,10 @@
     ")\n",
     "\n",
     "# drop extraneous columns\n",
-    "relationship_with_labels = relationship_with_labels.drop(columns=[\"index\", \"score\", \"total_scores_for_entity_pair\"]).reset_index()\n",
+    "final_relationships = relationship_with_labels.drop(columns=[\"index\", \"score\", \"total_scores_for_entity_pair\"]).reset_index()\n",
     "\n",
-    "with open(\"relationships_with_labels.pkl\", \"wb\") as f:\n",
-    "    relationship_with_labels.to_pickle(f)"
+    "with open(os.path.join(PKL_DIR, \"final_relationships.pkl\"), \"wb\") as f:\n",
+    "    final_relationships.to_pickle(f)"
    ]
   }
  ],
