--- a/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
+++ b/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
@@ -110,7 +110,7 @@
     "    if MODEL == \"gpt-3.5-turbo-instruct\":\n",
     "        response = client.completions.create(model=MODEL, prompt=prompt).choices[0].text\n",
     "    else:\n",
-    "        response = client.completions.create(model=MODEL, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
+    "        response = client.chat.completions.create(model=MODEL, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
     "\n",
     "    assert response\n",
     "    assert type(response) == str\n",
