--- a/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
+++ b/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
@@ -100,6 +100,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -185,34 +192,20 @@
    "outputs": [],
    "source": [
     "# refine entity labels\n",
-    "import os\n",
     "import re\n",
+    "from time import sleep\n",
     "from openai import OpenAI\n",
     "import pandas as pd\n",
     "import random\n",
     "\n",
     "\n",
-    "os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
+    "# MODEL = \"gpt-3.5-turbo-instruct\"\n",
+    "MODEL = \"gpt-3.5-turbo-0125\"\n",
+    "\n",
+    "# os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
     "client = OpenAI()\n",
-    "model = client.models.list().data[0].id\n",
     "\n",
-    "VALID_LABELS = [\n",
-    "    \"PERSON\",\n",
-    "    \"PET\",\n",
-    "    \"ORG\",\n",
-    "    \"PRODUCT\",\n",
-    "    \"WEBSITE\",\n",
-    "    \"GPE\",\n",
-    "    \"TVSHOW\",\n",
-    "    \"BOOK\",\n",
-    "    \"MOVIE\",\n",
-    "    \"TECHNICAL_CONCEPT\",\n",
-    "    \"MUSICAL_GROUP\",\n",
-    "    \"EVENT\",\n",
-    "]\n",
-    "\n",
-    "TRUST_LABELS = [\"CARDINAL\", \"DATE\", \"TIME\"]\n",
     "\n",
     "entity_rows = []\n",
     "for _, row in tqdm(entities_df.iterrows()):\n",
@@ -229,11 +222,6 @@
     "        entity_rows.append({\"name\": name, \"label\": prev_label, \"fact\": fact, \"score\": 100, \"llm_response\": \"trusting prev label\"})\n",
     "        continue\n",
     "\n",
-    "    label_choices = VALID_LABELS.copy()\n",
-    "    random.shuffle(label_choices)\n",
-    "    labels_str = \", \".join(label_choices)\n",
-    "    candidates = {}\n",
-    "\n",
     "    prompt = f\"\"\"You are an entity resolution assistant. \n",
     "    You must classify the entity with name = {name}\n",
     "    \n",
@@ -248,7 +236,8 @@
     "    Then should follow with a short explanation of your reasoning.\n",
     "    \"\"\"\n",
     "\n",
-    "    response = client.chat.completions.create(model=model, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
+    "    sleep(0.2)\n",
+    "    response = client.chat.completions.create(model=MODEL, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
     "    assert response\n",
     "    print(f\"***\\nname: {name}\\n\\nfact: {fact}\\n\\nresponse: {response}\\n\\n***\\n\")\n",
     "\n",
@@ -263,7 +252,7 @@
     "                winner = label\n",
     "\n",
     "    try:\n",
-    "        score = int(re.search(r\"\\d+\", response).group())\n",
+    "        score = int(re.search(r\"\\d+\", response).group())  # type: ignore\n",
     "    except AttributeError:\n",
     "        score = 0\n",
     "\n",
@@ -331,7 +320,6 @@
    "source": [
     "import re\n",
     "from tqdm import tqdm\n",
-    "import os\n",
     "from openai import OpenAI\n",
     "import random\n",
     "\n",
@@ -359,10 +347,10 @@
     "    (\"EVENT\", \"DATE\"): [\"OCCURED_ON\"],\n",
     "}\n",
     "\n",
-    "os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
+    "# os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
     "client = OpenAI()\n",
-    "model = client.models.list().data[0].id\n",
+    "# model = client.models.list().data[0].id\n",
     "\n",
     "resolve_entities = pd.read_pickle(\"refined_labels.pkl\")[\"name\"]\n",
     "# first element in the tuple is the label\n",
@@ -418,8 +406,11 @@
     "            Then it should follow with a short explanation of your reasoning.\n",
     "            \"\"\"\n",
     "\n",
+    "            sleep(0.2)\n",
     "            response = (\n",
-    "                client.chat.completions.create(model=model, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
+    "                client.chat.completions.create(model=MODEL, temperature=0.0, messages=[{\"role\": \"user\", \"content\": prompt}])\n",
+    "                .choices[0]\n",
+    "                .message.content\n",
     "            )\n",
     "            assert response\n",
     "\n",
@@ -434,7 +425,7 @@
     "                        winner = label\n",
     "            # score is regex match for first number in the response\n",
     "            try:\n",
-    "                score = int(re.search(r\"\\d+\", response).group())\n",
+    "                score = int(re.search(r\"\\d+\", response).group())  # type: ignore\n",
     "            except AttributeError:\n",
     "                score = 0\n",
     "\n",
@@ -456,7 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +472,7 @@
     "relationship_names_and_labels_summed_scores = (\n",
     "    raw_relationships.groupby([\"entity_1\", \"entity_2\", \"relationship\"]).agg({\"score\": \"sum\"}).reset_index()\n",
     ")\n",
-    "relationship_name_total_scores = raw_relationships.groupby([\"entity_1\", \"entity_2\"])[\"score\"].sum().reset_index()\n",
+    "\n",
     "\n",
     "relationship_names_and_labels_summed_scores[\"total_scores_for_entity_pair\"] = relationship_names_and_labels_summed_scores.groupby(\n",
     "    [\"entity_1\", \"entity_2\"]\n",
