--- a/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/set_system.ipynb
+++ b/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/set_system.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from youbot.clients.memgpt_client import get_agent\n",
     "from youbot.store import get_youbot_user_by_id\n",
     "\n",
     "\n",
-    "agent = get_youbot_user_by_id(1).agent"
+    "agent = get_agent(get_youbot_user_by_id(1))"
    ]
   },
   {
